--- a/pom.xml
+++ b/pom.xml
@@ -67,8 +67,16 @@
 		<dependency>
  			<groupId>org.projectlombok</groupId>
  			<artifactId>lombok</artifactId>
- 			<scope>annotationProcessor</scope>
+			<version>1.18.26</version>
+ 			<scope>provided</scope>
  		</dependency>
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.3</version>
+		</dependency>
+
 
 	</dependencies>
 
