--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=biblioteca-virtual-api
 
-spring.datasource.url=jdbc:h2:mem:bibliotecavirtual
-
+spring.datasource.url=jdbc:postgresql://postgres-db:5432/devopsdb
+spring.datasource.username=admin
+spring.datasource.password=admin123
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
