att - ajustando nome do container

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=biblioteca-virtual-api
 
-spring.datasource.url=jdbc:postgresql://postgres-db:5432/devopsdb
+spring.datasource.url=jdbc:postgresql://caioliang-postgres-db:5432/devopsdb
 spring.datasource.username=admin
 spring.datasource.password=admin123
 spring.jpa.hibernate.ddl-auto=update
